# Mini-Physics-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asd
cmake/: Findallegro.cmake
src/: AABB.cpp  AABB.h  Fixture.cpp  Fixture.h  ForceRegistry.cpp  ForceRegistry.h  IBoundingBolume.h  IForceGenerator.h  IShape.h  MathFunctions.cpp  MathFunctions.h  Particle.cpp  Particle.h  ParticleContact.cpp  ParticleContact.h  ParticleContactResolver.cpp  ParticleContactResolver.h  ParticleForceGenerator.h  ParticleForceGenerators.cpp  ParticleForceGenerators.h  ParticleForceRegistry.cpp  ParticleForceRegistry.h  ParticlePhysicsWorld.cpp  ParticlePhysicsWorld.h  PhysicsStepper.cpp  PhysicsStepper.h  PhysicsWorld.cpp  PhysicsWorld.h  Polygon.cpp  Polygon.h  Precision.h  RigidBody.cpp  RigidBody.h  RigidBodyElastic.cpp  RigidBodyElastic.h  RigidBodyFixedElastic.cpp  RigidBodyFixedElastic.h  RigidBodyFixedGravity.cpp  RigidBodyFixedGravity.h  RigidBodyFixedSpring.cpp  (+11 more)
